comment out fixed width on appbadge to fix text wrap when spaces are present in app name

--- a/site/details.css
+++ b/site/details.css
@@ -26,7 +26,7 @@
 .getInfo > .appBadge {
   position:absolute;
   display:inline-block;
-  width:80px;
+/*  width:80px; */
   height:116px;
   text-align:center;
   position:relative;
